syntax = "proto3";

package pb;



//The Timeservice service definition.
service Timeservice {
 rpc GetTimeByTimeZone (GetTimeByTimeZoneRequest) returns (GetTimeByTimeZoneReply);
}

message GetTimeByTimeZoneRequest {
    string timeZone = 1;
}

message GetTimeByTimeZoneReply {
    string timeIs = 1;
}

